--- a/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
+++ b/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
@@ -6,7 +6,7 @@
       "name": "1-convolutions-in-action.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMtrLW2pbT9MvPPVXVLscih",
+      "authorship_tag": "ABX9TyNDlvXZjKlucEz49f/yH3W0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-T4StfdbzKPO",
-        "outputId": "d4ed79b8-0ceb-4659-d4d2-90738a436e0b"
+        "outputId": "0c11b71c-1298-4965-b727-505e0e59e83f"
       },
       "source": [
         "data_path = '../data-unversioned/p1ch6/'\n",
@@ -113,7 +113,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 170498071/170498071 [00:02<00:00, 74847464.24it/s]\n"
+            "100%|██████████| 170498071/170498071 [00:04<00:00, 41977341.42it/s]\n"
           ]
         },
         {
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3zOHe4ySzqB1",
-        "outputId": "fc6084a2-36a8-4d8d-d226-e6b695cc957e"
+        "outputId": "5c71c704-81e7-42ee-f1e5-3bb3b9a4899d"
       },
       "source": [
         "cifar10_val = datasets.CIFAR10(\n",
@@ -194,7 +194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b154e05d-e873-443c-e59d-74d4715b76e3"
+        "outputId": "feaafdb9-0070-4193-9fd0-86243c04dea5"
       },
       "source": [
         "conv = nn.Conv2d(3, 16, kernel_size=3)\n",
@@ -236,7 +236,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b65505d-c963-44ee-a3ba-8d1e3350d4f7"
+        "outputId": "9094cf76-7eef-4946-da38-bb81251fe502"
       },
       "source": [
         "conv.weight.shape, conv.bias.shape"
@@ -279,7 +279,7 @@
       ],
       "metadata": {
         "id": "NdaCZITgrQiz",
-        "outputId": "e2e225bc-b5ec-4b15-fdb1-4e681c9afcbf",
+        "outputId": "7bda3716-935f-4dc0-c2b3-2b23b63139c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -305,7 +305,7 @@
       ],
       "metadata": {
         "id": "LO6cs18zrXwQ",
-        "outputId": "d634237d-9c68-4dec-9c53-1af2bb2fe630",
+        "outputId": "960428c4-dbda-43cc-cf83-ff17dd1a8c6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -331,7 +331,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5818fe67-a764-40fb-8e24-3639d5f3cc38"
+        "outputId": "e673357f-076b-436d-e367-39dd8981ddc1"
       },
       "source": [
         "img, _ = cifar2[0]\n",
@@ -369,7 +369,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "264ec2d7-bd53-406a-a2f9-44e146974bd5"
+        "outputId": "fc438041-98c9-4941-f587-4280e66cd425"
       },
       "source": [
         "plt.imshow(output[0, 0].detach(), cmap=\"gray\")\n",
@@ -397,7 +397,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "7ef1291a-7e36-4974-96c0-029e9af2de94"
+        "outputId": "a027f422-d6a6-4088-bb26-0fdaeff6226c"
       },
       "source": [
         "plt.figure(figsize=(10, 4.8))\n",
@@ -463,7 +463,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "45c732f6-8a2f-4df9-ecc3-0b6d9205e372"
+        "outputId": "04857d4e-bd6f-450d-b125-ef9455d0b3e7"
       },
       "source": [
         "# Now with padding\n",
@@ -536,7 +536,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "610eab6d-b7b2-46dd-bdb4-08a86032bac2"
+        "outputId": "564ac92e-445a-4431-b6b9-96edb641ad41"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -599,7 +599,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "16bc2bd4-a0d2-4376-b1b4-1deb574395f0"
+        "outputId": "82704032-bac0-4c62-9f78-ec1af58f0338"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -654,7 +654,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d367f52c-82ad-40d9-cd95-cdb872a86f6c"
+        "outputId": "46593d59-cdda-4ec3-ece9-9f026ccef02d"
       },
       "source": [
         "pool = nn.MaxPool2d(2)\n",
@@ -691,12 +691,6 @@
         "id": "1edjoyfl1iLE"
       },
       "source": [
-        "With these building blocks in our hands, we can now proceed to build our convolutional neural network for detecting birds and airplanes.\n",
-        "\n",
-        "The first convolution takes us from 3 RGB channels to 16, thereby giving the network a chance to generate 16 independent features that operate to (hopefully) discriminate low-level features of birds and airplanes. Then we apply the Tanh activation function. The resulting 16-channel 32 × 32 image is pooled to a 16-channel 16 × 16 image by the first MaxPool3d. At this point, the downsampled image undergoes another convolution that generates an 8-channel 16 × 16 output. With any luck, this output will consist of higher-level features. Again, we apply a Tanh activation and then pool to an 8-channel 8 × 8 output.\n",
-        "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/deep-learning-with-pytorch/conv-arch.png?raw=1' width='800'/>\n",
-        "\n",
         "Thinking back to the beginning of this chapter, we already know what we need to\n",
         "do: turn the 8-channel 8 × 8 image into a 1D vector and complete our network with a set of fully connected layers:"
       ]
@@ -723,7 +717,7 @@
         "    nn.Linear(32, 2)\n",
         ")"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -732,7 +726,11 @@
         "id": "ixhmK1J_27MS"
       },
       "source": [
-        "Ignore the “something missing” comment for a minute. Let’s first notice that the size of the linear layer is dependent on the expected size of the output of MaxPool2d: 8 × 8 × 8 = 512. Let’s count the number of parameters for this small model:"
+        "Ignore the “something missing” comment for a minute.\n",
+        "\n",
+        "Let’s first notice that the size of the linear layer is dependent on the expected size of the output of `MaxPool2d: 8 × 8 × 8 = 512`.\n",
+        "\n",
+        "Let’s count the number of parameters for this small model:"
       ]
     },
     {
@@ -742,13 +740,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8f1ef310-eee6-4503-aa03-cfbdd378ae66"
+        "outputId": "f8eef85b-b199-4438-d55b-5142def67033"
       },
       "source": [
         "numel_list = [p.numel() for p in model.parameters()]\n",
         "sum(numel_list), numel_list"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,10 +755,8 @@
               "(18090, [432, 16, 1152, 8, 16384, 32, 64, 2])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     },
@@ -780,10 +776,34 @@
         "id": "zs8ISdOv3mVF"
       },
       "source": [
-        "# model(img.unsqueeze(0))"
+        "#model(img.unsqueeze(0))"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```log\n",
+        "---------------------------------------------------------------------------\n",
+        "RuntimeError                              Traceback (most recent call last)\n",
+        "<ipython-input-21-9c784fd7714c> in <cell line: 1>()\n",
+        "----> 1 model(img.unsqueeze(0))\n",
+        "\n",
+        "5 frames\n",
+        "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/linear.py in forward(self, input)\n",
+        "    112\n",
+        "    113     def forward(self, input: Tensor) -> Tensor:\n",
+        "--> 114         return F.linear(input, self.weight, self.bias)\n",
+        "    115\n",
+        "    116     def extra_repr(self) -> str:\n",
+        "\n",
+        "RuntimeError: mat1 and mat2 shapes cannot be multiplied (64x8 and 512x32)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "DE8RWbfZTWLc"
+      }
     },
     {
       "cell_type": "markdown",
@@ -791,9 +811,9 @@
         "id": "SvvYhkD04B2t"
       },
       "source": [
-        "Admittedly, the error message is a bit obscure, but not too much so. We find references to linear in the traceback: looking back at the model, we see that only module that has to have a 512 × 32 tensor is nn.Linear(512, 32), the first linear module after the last convolution block.\n",
+        "Admittedly, the error message is a bit obscure, but not too much so. We find references to linear in the traceback: looking back at the model, we see that only module that has to have a `512 × 32` tensor is `nn.Linear(512, 32)`, the first linear module after the last convolution block.\n",
         "\n",
-        "What’s missing there is the reshaping step from an 8-channel 8 × 8 image to a 512-element, 1D vector (1D if we ignore the batch dimension, that is). This could be achieved by calling view on the output of the last nn.MaxPool2d, but unfortunately, we don’t have any explicit visibility of the output of each module when we use nn.Sequential."
+        "What’s missing there is the reshaping step from an 8-channel `8 × 8` image to a 512-element, 1D vector (1D if we ignore the batch dimension, that is). This could be achieved by calling view on the output of the last `nn.MaxPool2d`, but unfortunately, we don’t have any explicit visibility of the output of each module when we use `nn.Sequential`."
       ]
     },
     {
