--- a/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
+++ b/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
@@ -6,7 +6,7 @@
       "name": "1-convolutions-in-action.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNDlvXZjKlucEz49f/yH3W0",
+      "authorship_tag": "ABX9TyPu77Cb4m3rk66Ly9VES9E+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-T4StfdbzKPO",
-        "outputId": "0c11b71c-1298-4965-b727-505e0e59e83f"
+        "outputId": "8b533a6e-9b2f-4790-9859-2aa4ed475882"
       },
       "source": [
         "data_path = '../data-unversioned/p1ch6/'\n",
@@ -113,7 +113,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 170498071/170498071 [00:04<00:00, 41977341.42it/s]\n"
+            "100%|██████████| 170498071/170498071 [00:02<00:00, 58340717.79it/s]\n"
           ]
         },
         {
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3zOHe4ySzqB1",
-        "outputId": "5c71c704-81e7-42ee-f1e5-3bb3b9a4899d"
+        "outputId": "d4203098-498d-48c2-b5f1-19d4291daea2"
       },
       "source": [
         "cifar10_val = datasets.CIFAR10(\n",
@@ -194,7 +194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "feaafdb9-0070-4193-9fd0-86243c04dea5"
+        "outputId": "14b6f228-cab9-4286-d27c-f6e3cfe1ebe3"
       },
       "source": [
         "conv = nn.Conv2d(3, 16, kernel_size=3)\n",
@@ -236,7 +236,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9094cf76-7eef-4946-da38-bb81251fe502"
+        "outputId": "bb0ea6c9-03ff-4162-fad7-9814267f3d95"
       },
       "source": [
         "conv.weight.shape, conv.bias.shape"
@@ -279,7 +279,7 @@
       ],
       "metadata": {
         "id": "NdaCZITgrQiz",
-        "outputId": "7bda3716-935f-4dc0-c2b3-2b23b63139c6",
+        "outputId": "f1d9fc82-0822-42c2-eea5-f5823c51aa49",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -305,7 +305,7 @@
       ],
       "metadata": {
         "id": "LO6cs18zrXwQ",
-        "outputId": "960428c4-dbda-43cc-cf83-ff17dd1a8c6d",
+        "outputId": "76f92354-b595-4eee-da80-23f2441fa337",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -331,7 +331,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e673357f-076b-436d-e367-39dd8981ddc1"
+        "outputId": "c1c99eab-ce56-45da-fd1f-e62914be21a2"
       },
       "source": [
         "img, _ = cifar2[0]\n",
@@ -369,7 +369,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "fc438041-98c9-4941-f587-4280e66cd425"
+        "outputId": "0e926d71-4dd5-4c13-a62f-a6e2e256b58a"
       },
       "source": [
         "plt.imshow(output[0, 0].detach(), cmap=\"gray\")\n",
@@ -397,7 +397,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "a027f422-d6a6-4088-bb26-0fdaeff6226c"
+        "outputId": "51c4e0a9-e2e9-43a6-f329-4bd22beb806e"
       },
       "source": [
         "plt.figure(figsize=(10, 4.8))\n",
@@ -463,7 +463,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "04857d4e-bd6f-450d-b125-ef9455d0b3e7"
+        "outputId": "2e8dcae7-a81c-4668-d8db-850c8b88645d"
       },
       "source": [
         "# Now with padding\n",
@@ -536,7 +536,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "564ac92e-445a-4431-b6b9-96edb641ad41"
+        "outputId": "c25b6c09-1a9c-4789-c27d-19603c78e784"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -599,7 +599,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "82704032-bac0-4c62-9f78-ec1af58f0338"
+        "outputId": "9202d674-634a-4024-ebbe-ebeb7756c93a"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -654,7 +654,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46593d59-cdda-4ec3-ece9-9f026ccef02d"
+        "outputId": "abde7633-ba2d-4575-9548-e9ebfc1ea803"
       },
       "source": [
         "pool = nn.MaxPool2d(2)\n",
@@ -717,7 +717,7 @@
         "    nn.Linear(32, 2)\n",
         ")"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -740,13 +740,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f8eef85b-b199-4438-d55b-5142def67033"
+        "outputId": "59305a38-3c09-4e06-cd3b-21511d6c1759"
       },
       "source": [
         "numel_list = [p.numel() for p in model.parameters()]\n",
         "sum(numel_list), numel_list"
       ],
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,7 +756,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 19
         }
       ]
     },
@@ -778,7 +778,7 @@
       "source": [
         "#model(img.unsqueeze(0))"
       ],
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -828,38 +828,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cEgJANh1revX"
-      },
-      "source": [
-        "When we want to build models that do more complex things than just applying\n",
-        "one layer after another, we need to leave for something that gives us\n",
-        "nn.Sequential added flexibility. PyTorch allows us to use any computation in our model by subclassing nn.Module.\n",
-        "\n",
-        "In order to subclass nn.Module, at a minimum we need to define a function\n",
-        "forward that takes the inputs to the module and returns the output. This is where we define our module’s computation.\n",
-        "\n",
-        "With PyTorch, if we use standard torch operations, autograd will take care of the backward pass automatically; and indeed, an nn.Module never comes with a backward.\n",
-        "\n",
-        "Typically, our computation will use other modules—premade like convolutions or\n",
-        "customized. To include these submodules, we typically define them in the constructor `__init__` and assign them to self for use in the forward function. They will, at the same time, hold their parameters throughout the lifetime of our module. Note that you need to call `super().__init__()` before you can do that (or PyTorch will remind you)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NxjdvnWSsOsX"
-      },
-      "source": [
-        "### Our network as an nn.Module"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "VHQLkX_KsSw-"
       },
       "source": [
-        "Let’s write our network as a submodule. To do so, we instantiate all the nn.Conv2d, nn.Linear, and so on that we previously passed to nn.Sequential in the constructor, and then use their instances one after another in forward:"
+        "Let’s write our network as a submodule."
       ]
     },
     {
@@ -894,7 +866,7 @@
         "\n",
         "    return out"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -905,12 +877,7 @@
       "source": [
         "Note that we leave the batch dimension as –1 in the call to view, since in principle we don’t know how many samples will be in the batch.\n",
         "\n",
-        "Recall that the goal of classification networks typically is to compress information in the sense that we start with an image with a sizable number of pixels and compress it into (a vector of probabilities of) classes. Two things about our architecture deserve some commentary with respect to this goal.\n",
-        "\n",
-        "First, our goal is reflected by the size of our intermediate values generally\n",
-        "shrinking—this is done by reducing the number of channels in the convolutions, by reducing the number of pixels through pooling, and by having an output dimension lower than the input dimension in the linear layers. This is a common trait of classification networks. However, the reduction is achieved by pooling in the spatial resolution, but the number of channels increases (still resulting in a reduction in size). It seems that our pattern of fast information reduction works well with networks of limited depth and small images; but for deeper networks, the decrease is typically slower.\n",
-        "\n",
-        "Second, in one layer, there is not a reduction of output size with regard to input size: the initial convolution. If we consider a single output pixel as a vector of 32 elements (the channels), it is a linear transformation of 27 elements (as a convolution of 3 channels × 3 × 3 kernel size)—only a moderate increase."
+        "Recall that the goal of classification networks typically is to compress information in the sense that we start with an image with a sizable number of pixels and compress it into (a vector of probabilities of) classes.\n"
       ]
     },
     {
@@ -919,7 +886,7 @@
         "id": "4TfnY4Kn1XyG"
       },
       "source": [
-        "### How PyTorch keeps track of parameters and submodules"
+        "**How PyTorch keeps track of parameters and submodules?**"
       ]
     },
     {
@@ -938,7 +905,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d54d15b-5875-4144-e486-7fa822538a1b"
+        "outputId": "5a10a8c9-4627-442c-e48d-6c6238f6aeb5"
       },
       "source": [
         "net = Net()\n",
@@ -946,7 +913,7 @@
         "numel_list = [p.numel() for p in model.parameters()]\n",
         "sum(numel_list), numel_list"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,22 +922,9 @@
               "(18090, [432, 16, 1152, 8, 16384, 32, 64, 2])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 25
+          "metadata": {},
+          "execution_count": 22
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uclVkuGA4jkN"
-      },
-      "source": [
-        "What happens here is that the call delves into all submodules assigned\n",
-        "parameters() as attributes in the constructor and recursively calls\n",
-        "on them. No matter parameters()  how nested the submodule, any can access the list of all child parameters. nn.Module By accessing their grad attribute, which has been populated by autograd, the optimizer will know how to change parameters to minimize the loss."
       ]
     },
     {
@@ -979,7 +933,7 @@
         "id": "MDymMIAEFNd2"
       },
       "source": [
-        "### The functional API"
+        "## Functional API"
       ]
     },
     {
