--- a/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
+++ b/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
@@ -6,7 +6,7 @@
       "name": "1-convolutions-in-action.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPu77Cb4m3rk66Ly9VES9E+",
+      "authorship_tag": "ABX9TyP7Z45t7RtQ2WKZsKarHoXh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-T4StfdbzKPO",
-        "outputId": "8b533a6e-9b2f-4790-9859-2aa4ed475882"
+        "outputId": "7538d3a2-c3c7-4cc6-e75b-812d1fad6383"
       },
       "source": [
         "data_path = '../data-unversioned/p1ch6/'\n",
@@ -113,7 +113,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 170498071/170498071 [00:02<00:00, 58340717.79it/s]\n"
+            "100%|██████████| 170498071/170498071 [00:03<00:00, 55858574.44it/s]\n"
           ]
         },
         {
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3zOHe4ySzqB1",
-        "outputId": "d4203098-498d-48c2-b5f1-19d4291daea2"
+        "outputId": "9af553bc-eaa2-4db9-d276-b36d70eaf822"
       },
       "source": [
         "cifar10_val = datasets.CIFAR10(\n",
@@ -194,7 +194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "14b6f228-cab9-4286-d27c-f6e3cfe1ebe3"
+        "outputId": "77e1adf2-279e-4004-b7b2-261b66e69d9c"
       },
       "source": [
         "conv = nn.Conv2d(3, 16, kernel_size=3)\n",
@@ -236,7 +236,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb0ea6c9-03ff-4162-fad7-9814267f3d95"
+        "outputId": "9f13051a-203b-4b1c-b527-cab951e91c9b"
       },
       "source": [
         "conv.weight.shape, conv.bias.shape"
@@ -279,7 +279,7 @@
       ],
       "metadata": {
         "id": "NdaCZITgrQiz",
-        "outputId": "f1d9fc82-0822-42c2-eea5-f5823c51aa49",
+        "outputId": "90a2e769-7fea-4cad-e71d-be9665a93a55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -305,7 +305,7 @@
       ],
       "metadata": {
         "id": "LO6cs18zrXwQ",
-        "outputId": "76f92354-b595-4eee-da80-23f2441fa337",
+        "outputId": "0b5c95d8-92c3-49fb-9a8f-5efd80c52a00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -331,7 +331,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c1c99eab-ce56-45da-fd1f-e62914be21a2"
+        "outputId": "a9675713-b2b0-4450-a989-33348d64f38a"
       },
       "source": [
         "img, _ = cifar2[0]\n",
@@ -369,7 +369,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "0e926d71-4dd5-4c13-a62f-a6e2e256b58a"
+        "outputId": "6e8b40a5-23a7-4ea1-8827-480cb1e5c276"
       },
       "source": [
         "plt.imshow(output[0, 0].detach(), cmap=\"gray\")\n",
@@ -397,7 +397,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "51c4e0a9-e2e9-43a6-f329-4bd22beb806e"
+        "outputId": "4b55be14-0547-4aab-f06e-06843cc81088"
       },
       "source": [
         "plt.figure(figsize=(10, 4.8))\n",
@@ -463,7 +463,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e8dcae7-a81c-4668-d8db-850c8b88645d"
+        "outputId": "99fc1a1f-6257-40b2-f1be-60e51083daaf"
       },
       "source": [
         "# Now with padding\n",
@@ -536,7 +536,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "c25b6c09-1a9c-4789-c27d-19603c78e784"
+        "outputId": "4293b698-4ccc-4e60-db60-5f70e0f7b1e1"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -599,7 +599,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "9202d674-634a-4024-ebbe-ebeb7756c93a"
+        "outputId": "978481be-d0c3-4cc7-8903-9fb13df4e43d"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -654,7 +654,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "abde7633-ba2d-4575-9548-e9ebfc1ea803"
+        "outputId": "f3e0a77a-4245-4964-b63b-7f0cc5d7d252"
       },
       "source": [
         "pool = nn.MaxPool2d(2)\n",
@@ -740,7 +740,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "59305a38-3c09-4e06-cd3b-21511d6c1759"
+        "outputId": "5792fb69-17a4-4ebd-8e1b-d9722903d862"
       },
       "source": [
         "numel_list = [p.numel() for p in model.parameters()]\n",
@@ -905,7 +905,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a10a8c9-4627-442c-e48d-6c6238f6aeb5"
+        "outputId": "ce5a79fe-949d-4791-f287-6c1e4ce969b3"
       },
       "source": [
         "net = Net()\n",
@@ -944,11 +944,11 @@
       "source": [
         "By “functional” here we mean “having no internal state”—in other words, “whose output value is solely and fully determined by the value input arguments.”\n",
         "\n",
-        "Indeed, torch.nn.functional provides many functions that work like the modules we find in nn. But instead of working on the input arguments and stored parameters like the module counterparts, they take inputs and parameters as arguments to the function call.\n",
+        "Back to our model, it makes sense to keep using nn modules for `nn.Linear` and\n",
+        "`nn.Conv2d` so that Net will be able to manage their Parameters during training.\n",
         "\n",
-        "For instance, the functional counterpart of nn.Linear is nn.functional.linear,\n",
-        "which is a function that has signature linear(input, weight, bias=None). The\n",
-        "weight and bias parameters are arguments to the function."
+        "However, we can safely switch to the functional counterparts of pooling and activation,\n",
+        "since they have no parameters:"
       ]
     },
     {
@@ -975,7 +975,7 @@
         "\n",
         "    return out"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -984,12 +984,6 @@
         "id": "jFpo5Jh0Ijr7"
       },
       "source": [
-        "Thus, the functional way also sheds light on what the nn.Module API is all about: a Module is a container for state in the forms of Parameters and submodules combined with the instructions to do a forward.\n",
-        "\n",
-        "Whether to use the functional or the modular API is a decision based on style and taste. When part of a network is so simple that we want to use nn.Sequential, we’re in the modular realm. When we are writing our own forwards, it may be more natural to use the functional interface for things that do not need state in the form of parameters.\n",
-        "\n",
-        "So now we can make our own nn.Module if we need to, and we also have the functional API for cases when instantiating and then calling an nn.Module is overkill.\n",
-        "\n",
         "Let’s double-check that our model runs, and then we’ll get to the training loop:"
       ]
     },
@@ -1000,35 +994,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40dfc0c6-4c86-4df1-9667-d59536b95f87"
+        "outputId": "d514cf81-26a7-4e14-dc39-e7a913aed2d5"
       },
       "source": [
         "model = Net()\n",
         "model(img.unsqueeze(0))"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[0.1720, 0.1507]], grad_fn=<AddmmBackward>)"
+              "tensor([[ 0.1659, -0.0395]], grad_fn=<AddmmBackward0>)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
+          "metadata": {},
+          "execution_count": 24
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JyU4XAGPJpc7"
-      },
-      "source": [
-        "We got two numbers! Information flows correctly. We might not realize it right now, but in more complex models, getting the size of the first linear layer right is sometimes a source of frustration."
       ]
     },
     {
@@ -1037,7 +1020,7 @@
         "id": "beTvODnmJrsp"
       },
       "source": [
-        "## Training our convnet"
+        "## Training convnet"
       ]
     },
     {
