--- a/neural-networks-from-scratch-in-python/01_coding_neurons.ipynb
+++ b/neural-networks-from-scratch-in-python/01_coding_neurons.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO2f03u2kbht0dVgAoEToLE",
+      "authorship_tag": "ABX9TyNC3uSCiRBActRpUb2kpCuW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "o1qEXtVJXGqL"
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "-3OXUqJ9XLvV"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -100,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u-M5ZiHBXyLz",
-        "outputId": "76f75c7d-ec30-442a-ac74-658586a83da8"
+        "outputId": "f6126d97-baa4-4c94-ffd0-dc446c196e7e"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "qsmVFGzrX5B5"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -147,9 +147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0z2GKij4YUkb",
-        "outputId": "4459c7f8-21a1-4630-f855-8caee78df97c"
+        "outputId": "7c7aa519-a400-4c9a-c9f0-12900fa2e896"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "Fp7L_h4HYZWI"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -246,9 +246,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XHLTJUEyaVxj",
-        "outputId": "a9b05fe9-601a-4f33-feed-21f869606e12"
+        "outputId": "6795c2e4-6088-448e-b26a-9621e43705fb"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tn0SpJCpbH52",
-        "outputId": "0f4b2359-1d53-4755-9044-70b6caf8d900"
+        "outputId": "b0624695-1ee7-4d7b-a133-5ab8086a1cae"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Edk-qzDAchYo",
-        "outputId": "153c5b18-61b3-45fd-9933-2e6aac729f63"
+        "outputId": "972369df-aa64-4569-a42c-4113af20eedb"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,9 +396,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SnDZQzObgFlK",
-        "outputId": "e25aa26b-4574-4c47-c6c7-397e52f3f984"
+        "outputId": "5947ebda-95ff-454f-9f69-05a13f66990d"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,9 +439,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MtQFXkiLhKrh",
-        "outputId": "aa950d4b-98de-44b2-b3c3-30f8b8092f30"
+        "outputId": "f9392bc4-28e3-48ed-c6db-3cca1234d3c5"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,12 +463,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# a group of samples (inputs)\n",
+        "inputs = [\n",
+        "    [1.0, 2.0, 3.0, 2.5],\n",
+        "    [2.0, 5.0, -1.0, 2.0],\n",
+        "    [-1.5, 2.7, 3.3, -0.8]\n",
+        "]\n",
+        "\n",
+        "weights = [\n",
+        "    [0.2 , 0.8 , - 0.5, 1.0],\n",
+        "    [0.5 , - 0.91 , 0.26 , - 0.5],\n",
+        "    [- 0.26 , - 0.27 , 0.17 , 0.87]\n",
+        "]\n",
+        "\n",
+        "bias = [2.0, 3.0, 0.5]\n",
+        "\n",
+        "layer_outputs = np.dot(inputs, np.array(weights).T) + bias\n",
+        "print(layer_outputs)"
+      ],
       "metadata": {
-        "id": "io-HFZw5nBJe"
+        "id": "io-HFZw5nBJe",
+        "outputId": "b0a782dc-8359-4b42-cb6c-2736fa72de81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 4.8    1.21   2.385]\n",
+            " [ 8.9   -1.81   0.2  ]\n",
+            " [ 1.41   1.051  0.026]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
